--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="container text-uppercase">
+            <h1 class="title">Boolitalia</h1>
+            <!-- dentro gli span metto le mie var -->
+            <p>Prezzo biglietto <span id="biglietto"></span></p>
+            <p>sconto applicato <span id="sconto"></span></p>
+            <hr />
+            <p>totale <span id="totale"></span></p>
+        </div>
+
+        <script src="main.js"></script>
+    </body>
 </html>
